# stuff

BurnARM/: .classpath  .project
BurnARM/res/layout/: activity_main.xml  activity_settings.xml  three_fragment.xml  two_fragment.xml
BurnARM/res/menu/: main.xml
BurnARM/res/values/: strings.xml
HardwareTest/: .classpath  .cproject  .project  README.md  build_headers.xml
HardwareTest/jni/: Android.mk  GpioJNI.cpp  SerialPort.cpp  SerialPort485.cpp  com_norco_utils_GpioJNI.h  com_norco_utils_SerialPort.h  com_norco_utils_SerialPortJNI.h
HardwareTest/res/layout/: activity_main.xml  activity_result.xml  activity_settings.xml  ethernet_fragment.xml  four_fragment.xml  fpanel_fragment.xml  gpio_fragment.xml  headset_loop_fragment.xml  main_fragment.xml  one_fragment.xml  operation_fragment.xml  result_item.xml  rs485_fragment.xml  satadisk_fragment.xml  screen_display_fragment.xml  sdcard_fragment.xml  serialport_fragment.xml  serialport_item.xml  sim_fragment.xml  test_item.xml  three_fragment.xml  two_fragment.xml  usb_fragment.xml  version_fragment.xml  wifi_fragment.xml  wlan_addr_fragment.xml  wlanap_scan_fragment.xml
HardwareTest/res/menu/: main.xml
HardwareTest/res/values/: norco_settings.xml  strings.xml
openwrt_downloaderd/: Makefile
openwrt_downloaderd/files/: start_downloaderd.sh
openwrt_downloaderd/src/: Makefile  common.c  common.h  db.c  db.h  main.c  manager.c  manager.h  network.c  network.h  task.c  task.h  uri.c  usrv.c  usrv.h
openwrt_guid/: Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac
openwrt_guid/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
openwrt_guid/include/: application.h  common.h  conf.h  input_manager.h  log.h  mpdclient.h  network.h  server.h  srv_proc.h  types.h  uri_parse.h  utf8_strings.h  view_manager.h
openwrt_guid/res/: Makefile.am  Makefile.in
openwrt_guid/src/: Makefile.am  Makefile.in  application.c  force_poweroff.c  gui_cli.c  main.c
openwrt_guid/src/gui/display/: disp_manager.c  oled.c  oled_api.c  sdl.c
openwrt_guid/src/gui/encoding/: encoding_manager.c  utf-8.c
openwrt_guid/src/gui/fonts/: fonts_manager.c  freetype.c
openwrt_guid/src/gui/include/: disp_manager.h  encoding_manager.h  fonts_manager.h  oled_api.h  widget.h
openwrt_guid/src/gui/widget/: widget.c
openwrt_guid/src/input/: button.c  input_manager.c
openwrt_guid/src/net/: network.c
openwrt_guid/src/ubus/: server.c  srv_proc.c
openwrt_guid/src/utils/: battery.c  common.c  log.c  mpdclient.c  uri_parse.c  volume.c
openwrt_guid/src/view/: ab_view.c  airplay_view.c  bluetooth_view.c  channel_view.c  download_view.c  light_view.c  linein_view.c  lock_view.c  play_view.c  power_view.c  record_view.c  set_view.c  upgrade_view.c  view_manager.c  voice_view.c  volume_view.c
openwrt_guid/tools/: Makefile.am  Makefile.in
openwrt_guid/tools/mp3_record/: Makefile  Makefile.am  Makefile.in  mp3_record.c
openwrt_guid/tools/sfvoice/: Makefile  Makefile.am  Makefile.in  msp_errors.h  sfvoice.c
openwrt_playtts/include/: cfgable.h  common.h  mpdclient.h  tts.h
openwrt_playtts/src/: Makefile  bb_tts.c  cfgable.c  common.c  main.c  mpdclient.c  playtts.c  response.c  tts_error.c  xf_tts.c
openwrt_resolvd/include/: cfgable.h  common.h  manager.h  networking.h  resolve.h
openwrt_resolvd/src/: Makefile  cfgable.c  common.c  conf.c  diagnose.c  ethernet.c  hosts.c  main.c  manager.c  network.c  nslookup.c  ping.c  request.c  resolve.c  services.json  uci.c
playerd-alex/: Makefile
playerd-alex/files/: playerd.init  playerd.init2  start_playerd.sh
playerd-alex/src/: Makefile  base64.c  config.h  mosquitto_client.c  mpd.c  msg.c  parse.c
(+37 files in other folders)
